<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_menu">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="music_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="return_button">return to main menu</string>
    <string name="media_library_text">Empty Media-library activity</string>
    <string name="search_text">Empty Search activity</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email_recipient">gumabemc@yandex.ru</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="agreement_website">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Конец света -\nнет Интернета</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playback_time">00:00</string>
    <string name="audioplayer_playback_time">00:00</string>
    <string name="empty_string"></string>
    <string name="search_error_minus1">Проблемы со связью\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_error_else">Ошибка сервера</string>
    <string name="song_is_not_available">Песня недоступна для воспроизведения</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_one_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="exit_playlist_title">Завершить создание плейлиста?</string>
    <string name="exit_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="exit_playlist_cancel">Отмена</string>
    <string name="exit_playlist_confirm">Завершить</string>
    <string name="track_singular">трек</string>
    <string name="track_few">трека</string>
    <string name="track_many">треков</string>
    <string name="playlist_name_already_exist">Плейлист с таким именем уже существует</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="playlist_already_has_track">Трек уже добавлен в плейлист %1$s</string>
    <string name="minute_singular">минута</string>
    <string name="minute_few">минут</string>
    <string name="minute_many">минут</string>
    <string name="dialog_delete_track_title">Хотите удалить трек?</string>
    <string name="dialog_delete_track_no">НЕТ</string>
    <string name="dialog_delete_track_yes">ДА</string>
    <string name="no_track_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="to_share">Поделиться</string>
    <string name="to_edit_info">Редактировать информацию</string>
    <string name="to_delete_playlist">Удалить плейлист</string>
    <string name="dialog_delete_playlist_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="edit_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_saved_message">Плейлист %1$s сохранён</string>
    <string name="no_added_track">В плейлисте ещё нет треков</string>
</resources>