<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.ui.SettingsFragment"
    android:background="@color/customBackground"
    android:orientation="vertical">
    <!--?attr/background-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset16"
        android:layout_marginTop="@dimen/offset14"
        android:layout_marginBottom="@dimen/offset16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/settings"
        android:textColor="@color/customColorOnBackground"
        android:textFontWeight="500"
        android:textSize="@dimen/text22" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height244"
        android:layout_marginTop="@dimen/offset24"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/SettingsButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="@dimen/offset6"
                app:thumbTint="@color/customThumbTint"
                app:trackTint="@color/customTrackTint" />

        </FrameLayout>

        <Button
            android:id="@+id/shareButton"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_share"
            android:paddingEnd="@dimen/offset16"
            android:text="@string/share_the_app" />

        <Button
            android:id="@+id/supportButton"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_support"
            android:paddingEnd="@dimen/offset14"
            android:text="@string/contact_support" />

        <Button
            android:id="@+id/agreementButton"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:paddingEnd="@dimen/offset20"
            android:text="@string/user_agreement" />

    </LinearLayout>

</LinearLayout>