<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/head_margin"
        android:layout_marginTop="@dimen/head_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_from_settings_button"
            android:layout_width="@dimen/return_icon_size"
            android:layout_height="@dimen/return_icon_size"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/head_text_start"
            android:layout_marginTop="@dimen/head_text_top"
            android:text="@string/settings"
            android:textColor="@color/black_text"
            android:textSize="@dimen/main_menu_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_hi"
        android:layout_marginStart="@dimen/offset16"
        android:layout_marginTop="@dimen/settings_menu_marTop"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/offset14"
            android:text="@string/dark_theme"
            android:textColor="@color/black_text"
            android:textSize="@dimen/settings_menu_text_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/share_the_app"
                android:textColor="@color/black_text"
                android:textSize="@dimen/settings_menu_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingStart="@dimen/offset16"
                android:paddingEnd="@dimen/offset16"
                android:src="@drawable/ic_share"
                app:iconTint="@color/gray_icon" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/contact_support"
                android:textColor="@color/black_text"
                android:textSize="@dimen/settings_menu_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingStart="@dimen/offset14"
                android:paddingEnd="@dimen/offset14"
                android:src="@drawable/ic_support"
                app:iconTint="@color/gray_icon" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/user_agreement"
                android:textColor="@color/black_text"
                android:textSize="@dimen/settings_menu_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingStart="@dimen/offset20"
                android:paddingEnd="@dimen/offset20"
                android:src="@drawable/ic_arrow_forward"
                app:iconTint="@color/gray_icon" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>