<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/head_margin"
        android:layout_marginTop="@dimen/head_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backFromSearchButton"
            android:layout_width="@dimen/return_icon_size"
            android:layout_height="@dimen/return_icon_size"
            android:backgroundTint="@color/customBackground"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/customColorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/head_text_start"
            android:layout_marginTop="@dimen/head_text_top"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textColor="@color/customColorOnBackground"
            android:textFontWeight="500"
            android:textSize="@dimen/text22" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height36"
        android:layout_marginLeft="@dimen/offset16"
        android:layout_marginTop="@dimen/offset8"
        android:layout_marginRight="@dimen/offset16"
        android:layout_marginBottom="@dimen/offset24"
        android:background="@drawable/round_corners"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/offset12"
            android:src="@drawable/ic_search_mini" />

        <EditText
            android:id="@+id/searchEditText"
            style="@style/EditTextCursorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="36dp"
            android:autofillHints=""
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="@color/customSearchHintIcon"
            android:textFontWeight="400"
            android:textSize="@dimen/text16" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_horizontal"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/search_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/you_searched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset8"
                android:layout_marginBottom="@dimen/offset8"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:paddingTop="@dimen/offset18"
                android:paddingBottom="@dimen/offset12"
                android:text="@string/you_searched"
                android:textColor="@color/customColorOnBackground"
                android:textSize="@dimen/text19"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clear_history"
                android:paddingStart="@dimen/padding16"
                android:paddingEnd="@dimen/padding14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/offset24"
                android:backgroundTint="@color/customColorOnBackground"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/clear_history"
                android:textColor="@color/customBackground"
                android:textSize="@dimen/text14"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_nothing_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/offset102"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/nothing_found" />

        <TextView
            android:id="@+id/text_nothing_found"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/offset16"
            android:text="@string/nothing_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_internet_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/offset102"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/internet_error" />

        <TextView
            android:id="@+id/text_internet_error"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/offset16"
            android:gravity="center_horizontal"
            android:text="@string/something_went_wrong" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="@dimen/refresh_width"
            android:layout_height="@dimen/refresh_height"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/customColorOnBackground"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/refresh"
            android:textColor="@color/customBackground"
            android:textSize="@dimen/text14"
            app:cornerRadius="@dimen/refresh_corner" />
    </LinearLayout>

</LinearLayout>