<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.practicum.playlistmaker.medialibrary.ui.newplaylist.NewPlaylistFragment"
    android:background="@color/customBackground">

    <ImageButton
        android:id="@+id/back_from_new_playlist"
        android:layout_width="@dimen/return_icon_size"
        android:layout_height="@dimen/return_icon_size"
        android:layout_marginStart="@dimen/offset4"
        android:layout_marginTop="@dimen/offset4"
        android:backgroundTint="@color/customBackground"
        android:contentDescription="@string/return_button"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/customColorOnBackground" />

    <TextView
        android:id="@+id/heading"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset12"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="@id/back_from_new_playlist"
        app:layout_constraintStart_toEndOf="@id/back_from_new_playlist"
        app:layout_constraintTop_toTopOf="@id/back_from_new_playlist" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/offset24"
        android:layout_marginTop="@dimen/offset26"
        android:backgroundTint="@color/customBackground"
        app:cardCornerRadius="@dimen/corner8"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/input_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_from_new_playlist">

        <ImageView
            android:id="@+id/pick_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/playlist_cover_dash" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        style="@style/CustomOutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset16"
        android:layout_marginTop="@dimen/offset32"
        android:hint="@string/playlist_name"
        app:layout_constraintBottom_toTopOf="@id/input_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_description"
        style="@style/CustomOutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset16"
        android:layout_marginTop="@dimen/offset16"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            style="@style/CustomHintTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset17"
        android:layout_marginTop="@dimen/offset16"
        android:layout_marginBottom="@dimen/offset32"
        android:background="@drawable/button_create_selector"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textFontWeight="500"
        android:textSize="@dimen/text16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_description"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>